menu overlay styling and fixed menu items not showing issue

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -99,12 +99,30 @@
   }
 
   .nav-item {
-    //transform: translate3d(600px, 0, 0);
+    transform: translate3d(600px, 0, 0);
     @include easeOut;
 
     &.show {
       // Slide in from the right
       transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
     }
   }
 }
